--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,16 @@
             <version>5.2.2</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>me.jvt.cucumber</groupId>
+            <artifactId>reporting-plugin</artifactId>
+            <version>7.2.0</version>
+        </dependency>
+
+
+
+
     </dependencies>
 
 </project>
