Added jvt.cucumber report depend.,

--- a/configuration.properties
+++ b/configuration.properties
@@ -3,5 +3,10 @@ env = https://qa2.vytrack.com/user/login
 username = storemanager81
 password = UserUser123
 
+driver_username=user45
+driver_password=UserUser123
+
+store_manager_username = storemanager81
+sales_manager_username = salesmanager146
 
 # <-- can use this hashtag symbol to write comments
